# RSDKv4-Decompilation

./: .clang-format  .gitignore  .gitmodules  Android.mk  CMakeLists.txt  FAQ.md  LICENSE.md  Makefile  Makefile.msys2  README.md  RSDKv4.SDL1.sln  RSDKv4.sln  Sonic12Decomp.UWP.sln  Sonic12Decomp.sln  Sonic12Decomp_SDL1.sln  networking_code_proto.py  winactions.props
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  build_psvita.yml  switch.yml
RSDKv4/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Ini.cpp  Ini.hpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Network.cpp  Network.hpp  Networking.cpp  Networking.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  PauseMenu.cpp  PauseMenu.hpp  RSDKv4-sdl1.vcxproj  RSDKv4-sdl2.vcxproj  RSDKv4.SDL1.vcxproj  RSDKv4.SDL1.vcxproj.filters  RSDKv4.rc  RSDKv4.vcxproj  RSDKv4.vcxproj.filters  Reader.cpp  Reader.hpp  Renderer.cpp  Renderer.hpp  RetroEngine.cpp  (+25 more)
RSDKv4 ios.xcodeproj/: project.pbxproj
RSDKv4 ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKv4 ios.xcodeproj/project.xcworkspace/xcuserdata/rubberduckycooly.xcuserdatad/: WorkspaceSettings.xcsettings
RSDKv4 ios.xcodeproj/xcshareddata/xcschemes/: RSDKv4.xcscheme
RSDKv4.xcodeproj/: project.pbxproj
RSDKv4.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKv4.xcodeproj/project.xcworkspace/xcuserdata/rubberduckycooly.xcuserdatad/: WorkspaceSettings.xcsettings
RSDKv4.xcodeproj/xcshareddata/xcschemes/: RSDKv4.xcscheme
RSDKv4/3ds/: 3ds.cpp  3ds.h  splash_sonic1.h  splash_sonic2.h
RSDKv4/NativeObjects/: AboutScreen.cpp  AboutScreen.hpp  AchievementDisplay.cpp  AchievementDisplay.hpp  AchievementsButton.cpp  AchievementsButton.hpp  AchievementsMenu.cpp  AchievementsMenu.hpp  All.cpp  BackButton.cpp  BackButton.hpp  CWSplash.cpp  CWSplash.hpp  CreditText.cpp  CreditText.hpp  DialogPanel.cpp  DialogPanel.hpp  FadeScreen.cpp  FadeScreen.hpp  InstructionsScreen.cpp  InstructionsScreen.hpp  LeaderboardsButton.cpp  LeaderboardsButton.hpp  MenuBG.cpp  MenuBG.hpp  MenuControl.cpp  MenuControl.hpp  ModInfoButton.cpp  ModInfoButton.hpp  ModsButton.cpp  ModsButton.hpp  ModsMenu.cpp  ModsMenu.hpp  MultiplayerButton.cpp  MultiplayerButton.hpp  MultiplayerHandler.cpp  MultiplayerHandler.hpp  MultiplayerScreen.cpp  MultiplayerScreen.hpp  NativeEntityBase.cpp  (+44 more)
RSDKvB.xcodeproj/: project.pbxproj
RSDKvB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKvB.xcodeproj/xcshareddata/xcschemes/: RSDKvB.xcscheme
Server/: Makefile  Makefile.msys2  Server  Server.cpp  Server.hpp  Server.py  Server.vcxproj  Server.vcxproj.filters
Sonic1.NX/: Makefile
Sonic1.NX/romfs/: readme.md
Sonic1.Vita/: CMakeLists.txt  build-internal.sh  build.sh
Sonic12Decomp/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  Drawing.cpp  Drawing.hpp  Ini.cpp  Ini.hpp  Input.cpp  Input.hpp  Math.cpp  Math.hpp  Network.cpp  Network.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  PauseMenu.cpp  PauseMenu.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp  RetroGameLoop.cpp  RetroGameLoop.hpp  Scene.cpp  Scene.hpp  Scene3D.cpp  Scene3D.hpp  Script.cpp  Script.hpp  Sonic12Decomp.rc  Sonic12Decomp.vcxproj  Sonic12Decomp.vcxproj.filters  Sonic12Decomp_SDL1.vcxproj  (+17 more)
Sonic12Decomp/platform/: 3ds.cpp  3ds.h  NX.cpp  nx.h
Sonic1Decomp.3DS/: Makefile
Sonic1Decomp.3ds/: Makefile
Sonic1Decomp.3ds/banner/: Sonic1.bnr  info.rsf
Sonic1Decomp.UWP/: Package.appxmanifest  Sonic1Decomp.UWP.vcxproj  Sonic1Decomp.UWP.vcxproj.filters
Sonic2.NX/: Makefile
Sonic2.NX/romfs/: readme.md
Sonic2.Vita/: CMakeLists.txt  build-internal.sh  build.sh
Sonic2Decomp.3DS/: Makefile
Sonic2Decomp.3DS/banner/: Sonic2.bnr  info.rsf
Sonic2Decomp.3ds/: Makefile
Sonic2Decomp.UWP/: Package.appxmanifest  Sonic12Decomp.UWP.vcxproj.filters  Sonic2Decomp.UWP.vcxproj  Sonic2Decomp.UWP.vcxproj.filters
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/jni/: Application.mk  CMakeLists.txt  SDL
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/decomp/rsdkv4/: RSDKv4.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
android/app/src/main/res/values-v27/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
dependencies/all/: dependencies.txt  theoraplay.c  theoraplay.h
dependencies/all/theoraplay/: .hgignore  LICENSE.txt  hg_archival.txt  theoraplay.c  theoraplay.h  theoraplay_cvtrgb.h
dependencies/all/theoraplay/test/: maketest.sh  sdltheoraplay.c  simplesdl.c  testtheoraplay.c
dependencies/all/upng/: upng.cpp  upng.h
dependencies/android/: README.md  config_types.h  dependencies.txt
dependencies/ios/: dependencies.txt
dependencies/mac/: Info.plist  cocoaHelpers.hpp  cocoaHelpers.mm  dependencies.txt
dependencies/mac/Assets.xcassets/AppIcon.appiconset/: Contents.json
dependencies/mac/Base.lproj/: Main.storyboard
dependencies/switch/: filesystem.hpp
dependencies/windows/: dependencies.txt
dependencies/windows-uwp/: WinRTIncludes.hpp  dependencies.txt
flatpak/: README.md  com.sega.Sonic1.appdata.xml  com.sega.Sonic1.desktop  com.sega.Sonic1.json  com.sega.Sonic1Origins.json  com.sega.Sonic2.appdata.xml  com.sega.Sonic2.desktop  com.sega.Sonic2.json  com.sega.Sonic2Origins.json  run.sh
props/: winactions.props  winactions_x64.props
sce_sys2/livearea/contents/: template.xml
sonic1_livearea/livearea/contents/: template.xml
sonic2_livearea/livearea/contents/: template.xml
